--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     />
 
-    <title>aiTrade</title>
+    <title>AI Trade</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
